Implement main application and log portfolio details.

--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -9,6 +9,10 @@
     <h1>Financial Portfolio Management System</h1>
 
     <!-- Portfolio details and transaction log sections here -->
+    <h2>Total Portfolio Value</h2>
+    <ul id="totalPortfolioValue"></ul>
+    <h2>Portfolio Allocation Percentages</h2>
+    <ul id="portfolioAllocation"></ul>
 
     <!-- Main script entry point with module type -->
     <script type="module" src="main.js"></script>
